fixed find source button overlapping similar images

--- a/static/scss/upload.scss
+++ b/static/scss/upload.scss
@@ -157,7 +157,7 @@
 
   .similar-images {
     position: absolute;
-    left: 460px;
+    left: 560px;
     bottom: 20px;
     border-left: 2px solid $PINK;
     margin-left: 10px;
